# PhotoLab

./: .gitignore
src/: CMakeLists.txt  Makefile  main.cc
src/controller/: controller.cc  controller.h
src/customwidgets/filterswindow/: filterswindow.cc  filterswindow.h
src/data/: images.qrc
src/forms/: filterswindow.ui  mainwindow.ui
src/model/: model.cc  model.h
src/tests/: CMakeLists.txt  tests.cc
src/view/: view.cc  view.h
